--- a/src/main/resources/templates/pizzas/detail.html
+++ b/src/main/resources/templates/pizzas/detail.html
@@ -2,23 +2,25 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Pizza List</title>
+    <title>Pizza Spring</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}"/>
 </head>
-<body>
+<body class="bg-warning bg-opacity-10">
 <a th:href="@{/pizzas}">Le nostre pizze</a>
 <div class="container mt-3">
-    <div class="row" th:object="${pizza}">
-        <div class="col-6">
-            <h2 class="text-danger" th:text="*{nome}"></h2>
-            <h4 class="">Ingredienti:</h4>
-            <p th:text="*{descrizione}"></p>
-            <p class="fw-bold m-0">Prezzo:</p>
-            <p class="text-success" th:text="|*{prezzo} $|"></p>
-        </div>
-        <div class="col-6">
-            <img class="w-100" th:src="*{image}"/>
+    <div class="card rounded p-3">
+        <div class="row" th:object="${pizza}">
+            <div class="col-6">
+                <h2 class="text-danger" th:text="*{nome}"></h2>
+                <h4 class="">Ingredienti:</h4>
+                <p th:text="*{descrizione}"></p>
+                <p class="fw-bold m-0">Prezzo:</p>
+                <p class="text-success" th:text="|*{prezzo} $|"></p>
+            </div>
+            <div class="col-6">
+                <img class="w-100" th:src="*{image}"/>
+            </div>
         </div>
     </div>
 </div>
