edit and delete

--- a/src/main/resources/templates/pizzas/list.html
+++ b/src/main/resources/templates/pizzas/list.html
@@ -17,18 +17,36 @@
 <body class="bg-warning bg-opacity-10">
 <a th:href="@{/pizzas}" th:if="${pizzalist.size() > 0}">Le nostre pizze</a>
 <a th:href="@{/pizzas/create}" th:if="${pizzalist.size() > 0}">Aggiungi pizza</a>
-<h1 class="text-center">Le nostre pizze</h1>
+<div class="container">
+    <h1 class="text-center my-3">Le nostre pizze</h1>
+    <div class="alert alert-success alert-dismissable fade show"
+         th:if="${message != null}"
+    >
+        <span th:text="${message}"></span>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+</div>
 <div class="container d-flex justify-content-center">
-    <div th:each="pizza : ${pizzalist}" class="card mx-3" style="width: 18rem;">
-        <img class="card-img-top" alt="" th:src="${pizza.image}"/>
-        <div class="card-body d-flex flex-column">
-            <h5 th:text="${pizza.nome}" class="card-title text-danger mb-3"></h5>
-            <p class="fw-bold m-0">Ingredienti:</p>
-            <p th:text="${pizza.descrizione}" class="card-text"></p>
-            <div class="mt-auto">
-                <p class="fw-bold m-0">Prezzo:</p>
-                <p th:text="|${pizza.prezzo} $|"></p>
-                <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-primary">Dettaglio</a>
+    <div class="row">
+        <div class="col-3 mb-5" th:each="pizza : ${pizzalist}">
+            <div class="card mx-3" style="width: 18rem;">
+                <img class="card-img-top" alt="" th:src="${pizza.image}"/>
+                <div class="card-body d-flex flex-column">
+                    <h5 th:text="${pizza.nome}" class="card-title text-danger mb-3"></h5>
+                    <p class="fw-bold m-0">Ingredienti:</p>
+                    <p th:text="${pizza.descrizione}" class="card-text text-truncate"></p>
+                    <div class="mt-auto">
+                        <p class="fw-bold m-0">Prezzo:</p>
+                        <p class="text-success" th:text="|${pizza.prezzo} $|"></p>
+                        <div class="d-flex justify-content-center">
+                            <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-outline-info">Dettaglio</a>
+                            <a th:href="@{|/pizzas/edit/${pizza.id}|}" class="btn btn-outline-primary mx-2">Modifica</a>
+                            <form th:action="@{|/pizzas/delete/${pizza.id}|}" method="post">
+                                <button class="btn btn-outline-danger" type="submit">Elimina</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
