--- a/src/main/resources/templates/pizzas/list.html
+++ b/src/main/resources/templates/pizzas/list.html
@@ -19,7 +19,7 @@
 <a th:href="@{/pizzas/create}" th:if="${pizzalist.size() > 0}">Aggiungi pizza</a>
 <div class="container">
     <h1 class="text-center my-3">Le nostre pizze</h1>
-    <div class="alert alert-success alert-dismissable fade show"
+    <div class="alert alert-success alert-dismissible fade show"
          th:if="${message != null}"
     >
         <span th:text="${message}"></span>
