--- a/src/main/resources/templates/pizzas/list.html
+++ b/src/main/resources/templates/pizzas/list.html
@@ -12,6 +12,19 @@
         }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
     </style>
 </head>
 <body class="bg-warning bg-opacity-10">
@@ -41,9 +54,18 @@
                         <div class="d-flex justify-content-center">
                             <a th:href="@{|/pizzas/${pizza.id}|}" class="btn btn-outline-info">Dettaglio</a>
                             <a th:href="@{|/pizzas/edit/${pizza.id}|}" class="btn btn-outline-primary mx-2">Modifica</a>
-                            <form th:action="@{|/pizzas/delete/${pizza.id}|}" method="post">
+                            <!-- Il button delete non deve funzionare se la pizza ha offerte attive -->
+                            <form th:action="@{|/pizzas/delete/${pizza.id}|}" method="post"
+                                  th:if="${pizza.offertaList.size() == 0}"
+                            >
                                 <button class="btn btn-outline-danger" type="submit">Elimina</button>
                             </form>
+                            <!-- Se la pizza non ha offerte attive metto questo finto button -->
+                            <button class="btn btn-outline-danger" type="submit"
+                                    th:unless="${pizza.offertaList.size() == 0}"
+                                    disabled
+                            >Elimina
+                            </button>
                         </div>
                     </div>
                 </div>
