--- a/src/main/resources/templates/pizzas/detail.html
+++ b/src/main/resources/templates/pizzas/detail.html
@@ -5,6 +5,7 @@
     <title>Pizza Spring</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body class="bg-warning bg-opacity-10">
 <a th:href="@{/pizzas}">Le nostre pizze</a>
@@ -45,10 +46,14 @@
             <td class="text-success" th:text="*{nomeOfferta}"></td>
             <td th:text="*{#temporals.format(inizioOfferta, 'dd/MM/yyyy')}"></td>
             <td th:text="*{#temporals.format(fineOfferta, 'dd/MM/yyyy')}"></td>
-            <td>
-                <a th:href="@{|/offers/edit/*{id}|}" class="btn btn-outline-primary">Modifica offerta</a>
+            <td class="d-flex">
+                <a th:href="@{|/offers/edit/*{id}|}" class="btn btn-outline-primary">
+                    <i class="bi bi-pencil-fill"></i>
+                </a>
                 <form th:action="@{|/offertaList/delete/*{id}|}" method="post">
-                    <button class="btn btn-outline-danger" type="submit">Elimina</button>
+                    <button class="btn btn-outline-danger ms-2" type="submit">
+                        <i class="bi bi-trash-fill"></i>
+                    </button>
                 </form>
             </td>
         </tr>
