--- a/src/main/resources/templates/ingredients/index.html
+++ b/src/main/resources/templates/ingredients/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.2.3/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body class="bg-warning bg-opacity-10">
 <a th:href="@{/pizzas}">Le nostre pizze</a>
@@ -16,6 +17,7 @@
               th:action="@{/ingredients/save}"
               id="ingredient-form"
               method="post">
+            <input type="hidden" th:field="*{id}">
             <div class="row">
                 <div class="col-6">
                     <label class="form-label" for="ingrdient-nome">Nome ingrediente</label>
@@ -38,7 +40,7 @@
                     </div>
                 </div>
                 <div class="col mt-3">
-                    <button class="btn btn-outline-primary" type="submit">Aggiungi ingrediente</button>
+                    <button class="btn btn-outline-primary" type="submit">Salva ingrediente</button>
                     <button class="btn btn-outline-secondary ms-2">Annulla</button>
                 </div>
             </div>
@@ -62,8 +64,18 @@
                 <img class="w-25" th:src="*{image}">
             </td>
             <td th:text="*{nome}"></td>
-            <td><a th:href="@{/ingredients(edit=*{id})}">edit</a></td>
-            <td>Elimina</td>
+            <td>
+                <a th:href="@{/ingredients(edit=*{id})}" class="btn btn-outline-primary">
+                    <i class="bi bi-pencil-fill"></i>
+                </a>
+            </td>
+            <td>
+                <form th:action="@{|/ingredients/delete/*{id}|}" method="post">
+                    <button class="btn btn-outline-danger ms-2" type="submit">
+                        <i class="bi bi-trash-fill"></i>
+                    </button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
