--- a/src/main/resources/templates/pizzas/list.html
+++ b/src/main/resources/templates/pizzas/list.html
@@ -14,6 +14,7 @@
 
 
 
+
     </style>
 </head>
 <body class="bg-warning bg-opacity-10">
@@ -32,7 +33,7 @@
 <div class="container d-flex justify-content-center">
     <div class="row">
         <div class="col-3 mb-5" th:each="pizza : ${pizzalist}">
-            <div class="card mx-3" style="width: 18rem;">
+            <div class="card mx-3">
                 <img class="card-img-top" alt="" th:src="${pizza.image}"/>
                 <div class="card-body d-flex flex-column">
                     <h5 th:text="${pizza.nome}" class="card-title text-danger mb-3"></h5>
